--- a/content/econ03ge3a/The-Recovery-of-India.html
+++ b/content/econ03ge3a/The-Recovery-of-India.html
@@ -8,23 +8,18 @@ output: html_document
 
 
 
-<div id="contents" class="section level2">
-<h2>Contents</h2>
-<p><a href="#five-one">5.1 Histograms</a></p>
-<hr />
-</div>
 <div id="important-links" class="section level2">
 <h2>Important links</h2>
 <ul>
-<li><a href="https://core.ac.uk/download/pdf/19918818.pdf">Visible Hand: Public Policy and Economic Growth in the Nehru Rea</a></li>
+<li><a href="https://core.ac.uk/download/pdf/19918818.pdf">Visible Hand: Public Policy and Economic Growth in the Nehru Era</a></li>
 <li><a href="https://www.jstor.org/stable/40276833?seq=1#page_scan_tab_contents">The Recovery of India</a></li>
 </ul>
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
 <ul>
-<li><p>Paper written by PB in 2007 when Indian economy was growing at around 9% (constant prices).</p></li>
-<li><p>A certain despodency induced by a sense of an allegedly “wasted past”.</p></li>
+<li><p>Paper written by Pulapre Balakrishna (PB) in 2007 when Indian economy was growing at around 9% (constant prices).</p></li>
+<li><p>A certain despondency induced by a sense of an allegedly “wasted past”.</p></li>
 <li><p>Some have blamed Nehru and the policies adopted under his leadership.</p></li>
 <li><p>These are serious allegations that need to be addressed.</p></li>
 <li><p>Economic growth researchers more interested in <strong>growth transitions</strong>.</p></li>
@@ -54,7 +49,7 @@ output: html_document
 <li>2 sector economy: capital and consumer goods</li>
 <li>closed economy without government</li>
 <li>GDP = Output of Capital + Output of Consumer goods.</li>
-<li>The capital good enters into the production fuction ofconsumer goods and itself.</li>
+<li>The capital good enters into the production function ofconsumer goods and itself.</li>
 </ul></li>
 </ul>
 <hr />
@@ -63,7 +58,7 @@ output: html_document
 <ul>
 <li>Capital is not subjected to diminishing returns (this was an interesting departure from economic theory).
 <ul>
-<li>This implies that a <strong>greater initial allocation of investment to the production of capital goods would leave the economy with a higher stoock of the same</strong> in the future.</li>
+<li>This implies that a <strong>greater initial allocation of investment to the production of capital goods would leave the economy with a higher stock of the same</strong> in the future.</li>
 <li>Greater allocation of investment <span class="math inline">\(\Rightarrow\)</span> higher stock of capital goods <span class="math inline">\(\Rightarrow\)</span> Higher future Investment.</li>
 </ul></li>
 <li>Given these conditions, the planner now has to determine what share of investment be allocated to the capital goods sector, given the target level of income.</li>
@@ -99,9 +94,6 @@ output: html_document
 <li>In other words, the model makes a value judgement that <em>the loss of consumption (and thus welfare) that would occur in the short run has a lower social cost and is an acceptable sacrifice</em> on the part of the people.</li>
 <li>In return the people gets a <em>promise of an uncertain brighter future</em> under the presumption that more investment today would necessarily lead to a higher consumption level (and welfare) in the future.</li>
 </ul>
-</div>
-<div id="criticism-1" class="section level2">
-<h2>Criticism</h2>
 <ol start=2>
 <li>
 The model was based on an <strong>ideology</strong>.
