--- a/content/Students-Enrolled.html
+++ b/content/Students-Enrolled.html
@@ -7,7 +7,7 @@ output: html_document
 
 
 
-<p>Students currently enrolled = 28. Last updated 13-Oct-2020, 20:04:03.</p>
+<p>Students currently enrolled = 35. Last updated 15-Oct-2020, 19:01:02.</p>
 <div style="width:800px;line-height:3em;overflow:scroll;padding:5px;">
 <table>
 <colgroup>
@@ -75,6 +75,16 @@ output: html_document
 </tr>
 <tr class="odd">
 <td align="left">3</td>
+<td align="left">19213210021</td>
+<td align="left">MATH021</td>
+<td align="left">ANISHA CHOWDHURY</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:anishachowdhury33@gmail.com" class="email">anishachowdhury33@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
 <td align="left">19214130023</td>
 <td align="left">STAT023</td>
 <td align="left">ARJUN BADAL KISKU</td>
@@ -83,7 +93,7 @@ output: html_document
 <td align="left">STAT03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218110024</td>
 <td align="left">BIOS024</td>
@@ -93,7 +103,7 @@ output: html_document
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212170012</td>
 <td align="left">GEOG012</td>
@@ -103,7 +113,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19213120055</td>
 <td align="left">MATH055</td>
@@ -113,7 +123,7 @@ output: html_document
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212110010</td>
 <td align="left">GEOG010</td>
@@ -123,7 +133,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19212160011</td>
 <td align="left">GEOG011</td>
@@ -133,7 +143,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212210007</td>
 <td align="left">GEOG007</td>
@@ -143,7 +153,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19106210016</td>
 <td align="left">HIST016</td>
@@ -153,7 +163,7 @@ output: html_document
 <td align="left">HIST03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212130018</td>
 <td align="left">GEOG018</td>
@@ -163,7 +173,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19212270008</td>
 <td align="left">GEOG008</td>
@@ -173,7 +183,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212110032</td>
 <td align="left">GEOG032</td>
@@ -183,7 +193,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218220103</td>
 <td align="left">BIOS103</td>
@@ -193,7 +203,7 @@ output: html_document
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212210001</td>
 <td align="left">GEOG001</td>
@@ -203,7 +213,7 @@ output: html_document
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218110033</td>
 <td align="left">BIOS 033</td>
@@ -213,7 +223,7 @@ output: html_document
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19106210022</td>
 <td align="left">HIST022</td>
@@ -223,7 +233,7 @@ output: html_document
 <td align="left">HIST03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19103110008</td>
 <td align="left">ENGL008</td>
@@ -233,7 +243,7 @@ output: html_document
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213110011</td>
 <td align="left">Math011</td>
@@ -243,7 +253,7 @@ output: html_document
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218210043</td>
 <td align="left">BIOS 043</td>
@@ -253,7 +263,7 @@ output: html_document
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19218120071</td>
 <td align="left">BIOS071</td>
@@ -263,7 +273,7 @@ output: html_document
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19104110027</td>
 <td align="left">POLS027</td>
@@ -273,7 +283,7 @@ output: html_document
 <td align="left">POLS03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213160029</td>
 <td align="left">MATH29</td>
@@ -283,7 +293,7 @@ output: html_document
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19103210033</td>
 <td align="left">ENGL033</td>
@@ -293,7 +303,7 @@ output: html_document
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213260014</td>
 <td align="left">MATH014</td>
@@ -303,7 +313,7 @@ output: html_document
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19104130030</td>
 <td align="left">POLS030</td>
@@ -311,6 +321,66 @@ output: html_document
 <td align="left">Political Science</td>
 <td align="left"><a href="mailto:abhirajekka2000@gmail.com" class="email">abhirajekka2000@gmail.com</a></td>
 <td align="left">POLS03SEC1A</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19106110007</td>
+<td align="left">HIST007</td>
+<td align="left">HIMADRI MUKHERJEE</td>
+<td align="left">History</td>
+<td align="left"><a href="mailto:himadrimukherjee@outlook.com" class="email">himadrimukherjee@outlook.com</a></td>
+<td align="left">HIST03SEC1A</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19213110050</td>
+<td align="left">MATH50</td>
+<td align="left">SUSNIGHDHA SAHA</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:susnighdhasaha601@gmail.com" class="email">susnighdhasaha601@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19213220036</td>
+<td align="left">MATH036</td>
+<td align="left">SWARUPA PATRA</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:swarupapatrabarasat@gmail.com" class="email">swarupapatrabarasat@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19218210045</td>
+<td align="left">BIOS045</td>
+<td align="left">ANUSHKA TIWARI</td>
+<td align="left">Life Sciences</td>
+<td align="left"><a href="mailto:anushkatiwari1857@gmail.com" class="email">anushkatiwari1857@gmail.com</a></td>
+<td align="left">BIOS03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19213210016</td>
+<td align="left">MATH016</td>
+<td align="left">SANTASREE BANERJEE</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:bsantasree@gmail.com" class="email">bsantasree@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19213110023</td>
+<td align="left">Math023</td>
+<td align="left">ARUNAVO GANGULY</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:arunavo.rbd@gmail.com" class="email">arunavo.rbd@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 </tbody>
