--- a/public/students-enrolled/index.html
+++ b/public/students-enrolled/index.html
@@ -64,7 +64,7 @@
       
 
 
-<p>Students currently enrolled = 28. Last updated 13-Oct-2020, 20:04:03.</p>
+<p>Students currently enrolled = 35. Last updated 15-Oct-2020, 19:01:02.</p>
 <div style="width:800px;line-height:3em;overflow:scroll;padding:5px;">
 <table>
 <colgroup>
@@ -132,6 +132,16 @@
 </tr>
 <tr class="odd">
 <td align="left">3</td>
+<td align="left">19213210021</td>
+<td align="left">MATH021</td>
+<td align="left">ANISHA CHOWDHURY</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:anishachowdhury33@gmail.com" class="email">anishachowdhury33@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
 <td align="left">19214130023</td>
 <td align="left">STAT023</td>
 <td align="left">ARJUN BADAL KISKU</td>
@@ -140,7 +150,7 @@
 <td align="left">STAT03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218110024</td>
 <td align="left">BIOS024</td>
@@ -150,7 +160,7 @@
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212170012</td>
 <td align="left">GEOG012</td>
@@ -160,7 +170,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19213120055</td>
 <td align="left">MATH055</td>
@@ -170,7 +180,7 @@
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212110010</td>
 <td align="left">GEOG010</td>
@@ -180,7 +190,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19212160011</td>
 <td align="left">GEOG011</td>
@@ -190,7 +200,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212210007</td>
 <td align="left">GEOG007</td>
@@ -200,7 +210,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19106210016</td>
 <td align="left">HIST016</td>
@@ -210,7 +220,7 @@
 <td align="left">HIST03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212130018</td>
 <td align="left">GEOG018</td>
@@ -220,7 +230,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19212270008</td>
 <td align="left">GEOG008</td>
@@ -230,7 +240,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212110032</td>
 <td align="left">GEOG032</td>
@@ -240,7 +250,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218220103</td>
 <td align="left">BIOS103</td>
@@ -250,7 +260,7 @@
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19212210001</td>
 <td align="left">GEOG001</td>
@@ -260,7 +270,7 @@
 <td align="left">GEOG03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218110033</td>
 <td align="left">BIOS 033</td>
@@ -270,7 +280,7 @@
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19106210022</td>
 <td align="left">HIST022</td>
@@ -280,7 +290,7 @@
 <td align="left">HIST03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19103110008</td>
 <td align="left">ENGL008</td>
@@ -290,7 +300,7 @@
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213110011</td>
 <td align="left">Math011</td>
@@ -300,7 +310,7 @@
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19218210043</td>
 <td align="left">BIOS 043</td>
@@ -310,7 +320,7 @@
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19218120071</td>
 <td align="left">BIOS071</td>
@@ -320,7 +330,7 @@
 <td align="left">BIOS03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19104110027</td>
 <td align="left">POLS027</td>
@@ -330,7 +340,7 @@
 <td align="left">POLS03SEC1A</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213160029</td>
 <td align="left">MATH29</td>
@@ -340,7 +350,7 @@
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19103210033</td>
 <td align="left">ENGL033</td>
@@ -350,7 +360,7 @@
 <td align="left">ENGL03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">3</td>
 <td align="left">19213260014</td>
 <td align="left">MATH014</td>
@@ -360,7 +370,7 @@
 <td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">3</td>
 <td align="left">19104130030</td>
 <td align="left">POLS030</td>
@@ -368,6 +378,66 @@
 <td align="left">Political Science</td>
 <td align="left"><a href="mailto:abhirajekka2000@gmail.com" class="email">abhirajekka2000@gmail.com</a></td>
 <td align="left">POLS03SEC1A</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19106110007</td>
+<td align="left">HIST007</td>
+<td align="left">HIMADRI MUKHERJEE</td>
+<td align="left">History</td>
+<td align="left"><a href="mailto:himadrimukherjee@outlook.com" class="email">himadrimukherjee@outlook.com</a></td>
+<td align="left">HIST03SEC1A</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19213110050</td>
+<td align="left">MATH50</td>
+<td align="left">SUSNIGHDHA SAHA</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:susnighdhasaha601@gmail.com" class="email">susnighdhasaha601@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19213220036</td>
+<td align="left">MATH036</td>
+<td align="left">SWARUPA PATRA</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:swarupapatrabarasat@gmail.com" class="email">swarupapatrabarasat@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19218210045</td>
+<td align="left">BIOS045</td>
+<td align="left">ANUSHKA TIWARI</td>
+<td align="left">Life Sciences</td>
+<td align="left"><a href="mailto:anushkatiwari1857@gmail.com" class="email">anushkatiwari1857@gmail.com</a></td>
+<td align="left">BIOS03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="even">
+<td align="left">3</td>
+<td align="left">19213210016</td>
+<td align="left">MATH016</td>
+<td align="left">SANTASREE BANERJEE</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:bsantasree@gmail.com" class="email">bsantasree@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
+<td align="left">ECON03GE3A</td>
+</tr>
+<tr class="odd">
+<td align="left">3</td>
+<td align="left">19213110023</td>
+<td align="left">Math023</td>
+<td align="left">ARUNAVO GANGULY</td>
+<td align="left">Mathematics</td>
+<td align="left"><a href="mailto:arunavo.rbd@gmail.com" class="email">arunavo.rbd@gmail.com</a></td>
+<td align="left">MATH03SEC1</td>
 <td align="left">ECON03GE3A</td>
 </tr>
 </tbody>
