--- a/content/econ03ge3a/Integrating-growth-and-development.html
+++ b/content/econ03ge3a/Integrating-growth-and-development.html
@@ -13,3 +13,83 @@ output: html_document
 <li><a href="http://gen.lib.rus.ec/book/index.php?md5=9C29C2843AB83648C8FD29E8EE824AF6">An Uncertain Glory: India and its contradictions</a> by Jean Drèze and Amartya Sen, 2013. Chapter 2.</li>
 </ul>
 </div>
+<div id="a-short-history-of-fast-growth" class="section level2">
+<h2>A short history of fast growth</h2>
+<ul>
+<li>How long a history of fast economic growth does India have?</li>
+<li>There are many more signs of life in the Indian economy today than could be seen when political independence was granted to the ancient land in 1947, after which its straitlaced economy moved at a resiliently slow pace – about 3.5per cent per year – for nearly three decades. It was sometimes called ‘the Hindu rate of growth’, even though Hinduism had nothing to do with it – public policy had.</li>
+<li>since Indian GDP preceding independence was mainly stagnant and sometimes declining, even economic growth of 3.5 per cent per annum in the decades immediately following independence was, in fact, a big leap upwards.</li>
+<li>But the fact remains that 3.5 per cent per year (translating, at that time, into something like 1.5 per cent per year in per capita terms) is painfully slow for the purpose of rapid development and poverty reduction. The modesty of Indian economic growth, which lasted from the 1950s through the 1970s, gave way to considerable quickening in the 1980s, with a higher rate of expansion at 5 per cent per year.</li>
+<li>The robustness of high growth in India is undoubtedly connected with the economic reforms of the 1990s, which have built a solid foundation for continuing economic growth. After hovering between 5 and 6 per cent, the growth rate took a further hike upwards to 7 per cent and then further up, even crossing 9 per cent for several years (between 2005 and 2008).</li>
+<li>India’s real income per head is still lower than that of most countries outside sub-Saharan Africa. The picture is even worse if we focus on the quality of life of the underprivileged part of the Indian population, hundreds of millions of whom continue to lack the essential requirements of satisfactory living, from nutritious food to health care, decent work conditions, and warm clothes in the winter. Growth alone is unlikely to end these problems, at least not within a reasonable time frame, but it is certainly much easier to remedy such deficiencies in a growing economy.</li>
+</ul>
+</div>
+<div id="the-past-and-the-present" class="section level2">
+<h2>The past and the present</h2>
+<ul>
+<li>Adam Smith thought that India in general, particularly
+Bengal, was one of the most prosperous regions on the globe, and he devoted some time in The Wealth of Nations (1776) to explaining the roots of India’s comparative prosperity, which he attributed mostly to its flourishing system of trade, utilizing its navigable rivers. There were indeed long-established trading connections, stretching back nearly two thousand years, within the land and beyond it.</li>
+<li>Among other accounts, we have the interesting description of the trade-based prosperity of the region presented by Claudius Ptolemy, the pioneering geographer of the second century ad, who wrote about parts of the Indian economy in some detail, and identified a number of towns and cities that were engaged in thriving commerce within the country and were also active in trade with other countries. Pliny the Elder too provided descriptions of the open and flourishing economy of this region.</li>
+<li>The competitiveness and quality of Indian exports was a cause of concern for native European manufacturers, and in Britain in particular, before the establishment of British rule in India, there were several acts of Parliament prohibiting the wearing of Indian textile products.</li>
+<li>Did the Indian workers in industrial establishments enjoy a living standard commensurate with India’s formidable reputation as a star exporter?</li>
+<li>Comparisons of wage rates and prices seem to indicate that the real wages of Indian labour – and of course of skilled artisans – in economically active regions were not lower, indeed sometimes higher, than those then enjoyed by the corresponding occupation groups in many European countries.</li>
+<li>Adam Smith attributed the beginning of the economic decline of the British domain in India to ‘some injudicious restraints imposed by the servants of the East India Company’, to which he attributed even the Bengal famine of 1770. The decline continued throughout the nineteenth century, along with many other changes taking place in British India (including some that were very positive, such as the development of a modern press, and the sharing of the new scientific knowledge emanating from the European Enlightenment). Economic descent and decline were quite relentless right into the first half of the twentieth century.</li>
+<li>Indeed, in long periods during the epochal British rule the per capita real income of India actually declined. When there was growth, it was so moderate that falling behind other countries was not a hard feat. S. Sivasubramonian’s detailed study of ‘the national income of India in the twentieth century’ places the annual growth rate of India’s per capita income at about 0.1 per cent between 1900–1 and 1946–7. Growth was positive (though barely so) in this period because the dismal – and here we do mean ‘dismal’ – GDP growth of 0.9 per cent was counterbalanced by a low population growth rate (0.8 per cent), reɻecting the high mortality rates that characterized British India.</li>
+</ul>
+</div>
+<div id="growth-since-idependence" class="section level2">
+<h2>Growth since Idependence</h2>
+<ul>
+<li>Given this history, it is not hard to understand why the post-independence growth rate of 3.5 per cent or so per annum seemed like a positive change (see Table 2.1).</li>
+<li>And yet, the economic policies of the early post-independence period did not succeed either in accelerating the growth rate or in bringing about a major transformation of people’s living conditions.</li>
+<li>In fact, available evidence suggests that there was virtually no reduction of poverty, especially rural poverty, in India for most of the three decades that followed the launch of the First Five Year Plan in 1951.</li>
+</ul>
+<div class="figure">
+<img src="Table2.1.PNG" alt="" />
+<p class="caption">Table 2.1</p>
+</div>
+<ul>
+<li>This was certainly a failure. What went wrong in the initial period of post-independence planning?</li>
+<li>Was it “socialist” planning?</li>
+<li>Socialism has various interpretations. For instance in the Soviet Union and the other communist countries, education was a top priority. They were committed to achieving, despite all the political indoctrination and dogmatism, to ensure free and universal school education without delay.</li>
+<li>Did “socialist” India go that way?</li>
+<li>In this respect, Indian planners were at the opposite pole from planners in all the Communist countries – whether in Moscow and Beijing (even in the pre-reform period) or in Havana and Ho Chi Minh City They all valued universal standard school education, which was seen as a fundamental socialist commitment (clearly stated in the Communist Manifesto), and none of them allowed large proportions of children to remain out of school for decades on end (despite the mess they created in some other fields of economic policy in the name of socialism, not to mention the suppression of civil and political liberties). To see the huge neglect of school education in India’s planning in that period as having resulted from its ‘socialist’ planning would be to miss altogether the indigenous nature of this Indian folly. It was indeed a home-grown folly, to a great extent reflecting an upper-class – and upper-caste – bias against the education of the masses.</li>
+<li>India’s economic planning in the early post-independence period was not particularly ‘socialist’, and it was certainly not Soviet-style planning as is sometimes suggested.</li>
+<li>India was attempting the sort of state-led development strategy that was also being pursued, in various forms, by many other countries around that time, with varying outcomes, and had also been used earlier in many European countries. Most of the economy (with the main exception of what were seen as ‘essential services’ such as railways, power and water) was firmly in the private sector, and while the government did intervene in many ways, there was no sweeping nationalization of industries, let alone major land reforms.</li>
+<li>The early economic planning failed more completely in terms of social infrastructure and tertiary industries than it did in the fields of primary and secondary production. In fact, the growth rates of the primary and secondary sectors (roughly, agriculture and manufacturing respectively) were slightly higher in the 15 years that followed the launch of the First Five Year Plan in 1951 than in the 15 years that followed the launch of economic reforms in 1991.</li>
+<li>The period of sustained moderate growth came to an abrupt end in the mid-1960s (more precisely, in 1965–7), when India was hit by the worst successive droughts in the twentieth century, just after fighting a costly war with Pakistan in 1965. Agricultural production crashed, and GDP growth turned negative, as it often did at that time in drought years. Further calamities were not far oʃ: another war with Pakistan in 1971, and another spell of devastating droughts in 1971–3. During this troubled ten-year period, from 1965–6 to 1974–5, per capita GDP stagnated and per capita agricultural production declined.</li>
+<li>The outlook improved in the 1980s, when India experienced its second phase of growth acceleration, helped by a major recovery in the agricultural sector. The so-called Hindu rate of growth (whatever that meant) became a thing of the past, with the steady growth of the GDP rising to around 5 per cent per year in this decade.</li>
+<li>Further, this was also a period when growth was relatively balanced and equitable.</li>
+<li>The Green Revolution, launched after the 1965–7 droughts to reduce dependence on foreign aid, but delayed by further droughts in the early 1970s, began to show results: yields shot up by about 30 per cent in the 1980s (compared with barely 10 per cent in the 1970s), and the agricultural sector grew faster than ever before – at more than 3 per cent per year.</li>
+<li>Also, significantly for poverty reduction, agricultural wages grew at an unprecedented rate of about 5 per cent per year in real terms. And for the first time in decades, there was a sustained decline in poverty, in urban as well as rural areas.</li>
+<li>The 1980s, however, were also a period of growing fiscal deficits, trade deficits and foreign debt. These imbalances turned into a major crisis in 1990, partly due to rising oil prices and the disruption of remittances from the Persian Gulf.</li>
+<li>India ran out of foreign exchange reserves, to the extent of having to pawn gold to the Bank of England to avoid defaulting on its sovereign debt.</li>
+<li>A structural adjustment programme followed, initially (in 1991–3) on a tight leash from the International Monetary Fund, and thereafter, on the Indian government’s own terms: an anticipated follow-up loan was turned down as it was felt that ‘the IMF’s demands on fiscal prudence were more than India could
+deliver’.</li>
+<li>With the IMF at bay, shock treatment (for instance, across-the-board cuts in public expenditure including social spending) gave way to more gradual economic reforms.</li>
+<li>In terms of economic growth, the results were certainly impressive. While the growth rate of GDP was not much higher in the 1990s as a whole than in the 1980s, it picked up after the phase of economic stabilization (ending in 1993), and rose substantially in the years that followed.</li>
+<li>The impact of the reforms on economic growth in these years was certainly a significant achievement.</li>
+<li>In recent years, there has also been growing recognition of the need for wide-ranging reforms of a different kind – aimed for instance at eradicating corruption, restoring accountability in the public sector, fostering social equity, and improving the effectiveness of administrative, judicial and legislative processes.</li>
+<li>These wider programmes are not usually seen as being closely linked with economic reform, but ultimately both are part of a larger need to revitalize the country’s economic and social institutions and ensure that they contribute more to the improvement of people’s lives.</li>
+</ul>
+</div>
+<div id="economic-growth-of-what" class="section level2">
+<h2>Economic growth of what?</h2>
+<ul>
+<li>The living standards of the ‘middle classes’ (which tends to mean the top 20 per cent or so of the population by income) have improved well beyond what was expected – or could be anticipated – in the previous decades. But the story is more complex for many others such as the rickshaw puller, domestic worker or brick-kiln labourer. For them, and other underprivileged groups, the reform period has not been so exciting. It is not that their lives have not improved at all, but the pace of change has been excruciatingly slow and has barely altered their abysmal living conditions.</li>
+<li>To illustrate, according to National Sample Survey data average per capita expenditure in rural areas rose at the exceedingly low rate of about 1 per cent per year between 1993–4 and 2009–10, and even in urban areas, average per capita expenditure grew at only 2 per cent per year in this period.</li>
+<li>Similarly, there has been a major slowdown in the growth of real agricultural wages in the post-reform period: from about 5 per cent per year in the 1980s to 2 per cent or so in the 1990s and virtually zero in the early 2000s (see also Table 2.2). It is only after 2006, when the National Rural Employment Guarantee Act (NREGA) came into force, that the growth of real agricultural wages picked up again, especially for women.</li>
+</ul>
+<div class="figure">
+<img src="Table2.2.PNG" alt="" />
+<p class="caption">Table 2.2</p>
+</div>
+<ul>
+<li>According to comparable international data from the International Labour Organization, real wages in manufacturing in China grew at an astonishing 12 per cent per year or so in the ɹrst decade of this century, compared with about 2.5 per cent per year in India.21 There is some possibility of exaggeration in the official Chinese figures, but many independent studies corroborate the fact that real wages in China have been rising rapidly over the last twenty or thirty years. In India, by contrast, the growth rate of real wages has been much lower than that of per capita GDP over the same period.</li>
+</ul>
+<p><img src="Figure2.1.PNG" alt="Figure 2.1" />
+<img src="Figure2.2.PNG" alt="Figure 2.2" /></p>
+<ul>
+<li>In a paper by Ashok Kotwal, Bharat Ramaswamy and Wilima Wadhwa (2011), based on National Sample Survey data for 1983 and 2004–5.25 Over that period, the head-count ratio (for rural and urban areas combined) declined from 45 per cent to 28 per cent based on the official poverty line applicable at that time.26 The authors show that if the poverty line were to be doubled (though still to quite a low cut-oʃ point), the corresponding figures would be 86 per cent in 1983 and 80 per cent in 2004–5. That would look like a very moderate improvement, over more than twenty years, compared with the steep decline based on official poverty lines.</li>
+</ul>
+</div>
