--- a/content/econ03ge3a/Indian-Economy-on-the-eve-of-Independence.html
+++ b/content/econ03ge3a/Indian-Economy-on-the-eve-of-Independence.html
@@ -12,6 +12,10 @@ output: html_document
 <ul>
 <li><a href="https://ncert.nic.in/ncerts/l/keec101.pdf">NCERT Text Book</a> Chapter 1.</li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/51o2E9zjUE4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tUC__A9hENg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
 </div>
 <div id="introduction" class="section level2">
 <h2>Introduction</h2>
